# aws-lambda-calculator

./: .coverage  .dockerignore  .gitignore  .justfile  .pre-commit-config.yaml  404.html  Containerfile  Containerfile.distroless  Containerfile.lambda  README.md  README.md.bak  SECURITY.md  __spa-fallback.html  compose.yaml  cosign.pub  coverage.xml  data.json  flake.nix  index.html  mkdocs.yml  mypy.ini  openapi.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt  sonar-project.properties  template.yaml  trivy.yaml.bak
.claude/: CLAUDE.md
.claude/agents/: playwright-scraper-dev.md  react-playwright-test-generator.md
.devcontainer/: Dockerfile  aws.json  devcontainer.image.json  devcontainer.json  docker.json  flake.nix  shell.nix
.devcontainer/nix/: sources.nix
.direnv/: flake-profile-1-link
.github/: CODEOWNERS  FUNDING.yml  auto-labeler-conf.yaml  ci.yaml  dependabot.yaml  dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/codeql/: codeql-config.yaml
.github/linters/: actionlint.yaml
.github/workflows/: auto-assign.yaml  auto-labeler.yaml  aws-codebuild.yaml  cd-image.yaml  cd-package.yaml  cd-serverless.yaml  cd.yaml  ci.yaml  code-checks.yaml  codeql.yaml  coverage.yaml  dependabot-auto-merge.yaml  dependabot-auto-review.yaml  dependency-review.yaml  devpod-amd64.yaml  devpod-arm64.yaml  devpod-windows.yaml  devpod.yaml  generate-jsons.yaml  generate-spom.yaml  gitguardian.yaml  github-pages.yaml  hello-world.yaml  integration-tests.yaml  lambda-analysis.yaml  release.yaml  runs-on.yaml  semantic-check.yaml  sonarcloud.yaml  sonarqube.yaml  stale.yaml  superlinter.yaml  terraform-aws-github-runner.yaml  trivy.yaml  unit-tests.yaml
CODE_OF_CONDUCT/: index.html
CONTRIBUTING/: index.html
LICENSE/: index.html
SECURITY/: index.html
about/: index.html
assets/: ThemeContext-Bf93KkGl.js  ThemeContext-CSQcz9of.js  ThemeContext-DEmOhQrq.js  ThemeContext-Dby0xneV.js  ThemeContext-Pd4E67L3.js  about-B_F3Y0T-.js  about-DHpLV1vW.js  chunk-ZYFC6VSF-Dcl1VtS9.js  chunk-ZYFC6VSF-DyRubkOq.js  configuration-3B3yZbnv.js  configuration-CCoVOMof.js  demo-BR6u2mpU.js  entry.client-C9y7-ed8.js  getting-started-CVbrCW_t.js  getting-started-DCrlf80J.js  home-BLFPW79o.js  home-BmjJ514U.js  home-CE3RweUs.js  home-CWhz60-2.js  home-Ca2BHp_D.js  home-CkwdYDsd.js  home-Dhfiz-oi.js  home-DriJZc0h.js  home-jzVKBej_.js  index-0YO8-Y0i.css  index-87N9vpll.js  index-BbwcEtzF.js  index-By-ucwO2.js  index-DCBAolxZ.css  install-usage-CDm1Ps5y.js  install-usage-CK-Vp4jJ.js  install-usage-CSU2MoA_.js  install-usage-JjzSPcKl.js  introduction-C_4LXuGA.js  introduction-Dw0qioBN.js  main-B2pV3WMH.js  main-BdS1Ah2F.js  main-Bet7Z3Zt.css  main-BrqxnhAB.css  main-CD7ShBNT.css  (+45 more)
aws-lambda-calculator/: .justfile  index.html  mypy.ini  pyproject.toml  requirements.txt
aws-lambda-calculator/about/: index.html
aws-lambda-calculator/configuration/: index.html
aws-lambda-calculator/install-usage/: index.html
aws-lambda-calculator/introduction/: index.html
aws-lambda-calculator/src/aws_lambda_calculator/: .env  __init__.py  aws_lambda_calculator.py  calculator.py  main.py  models.py  pricing_scraper.py  scraper.py  screenshotter.py
aws-lambda-calculator/src/aws_lambda_calculator/jsons/: af-south-1.json  ap-east-1.json  ap-east-2.json  ap-northeast-2.json  ap-south-2.json  ap-southeast-1.json  ap-southeast-3.json  ap-southeast-4.json  ap-southeast-6.json  ca-west-1.json  eu-central-1.json  eu-central-2.json  eu-north-1.json  eu-south-1.json  eu-south-2.json  eu-west-1.json  eu-west-2.json  eu-west-3.json  il-central-1.json  me-central-1.json  me-south-1.json  mx-central-1.json  sa-east-1.json  us-east-1.json  us-east-2.json
aws-lambda-calculator/tests/: test_calculator.py  test_calculator_coverage.py  test_models.py  test_pytest_generate_tests_sample_code.py
cdk-app/: env0.yaml  package-lock.json  package.json
cdk-app/lambda/: Dockerfile  index.py
cdk-app/lib/: cdk-app-stack.ts
cli/: Containerfile  compose.yaml  pyproject.toml
cli/src/: main.py
client/: __spa-fallback.html  index.html
client/about/: index.html
client/assets/: demo-CLOfBLOh.js  manifest-5ad8ce2a.js  (+3 more)
configuration/: index.html
demo/: index.html
docs/: CONTRIBUTING  CONTRIBUTING.md  index.md  install-&-usage.md  introduction.md
getting-started/: index.html
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_0709859ee4413594___init___py.html  z_0709859ee4413594_calculator_py.html  z_0709859ee4413594_models_py.html  z_145eef247bfb46b6_aws_lambda_py.html  z_145eef247bfb46b6_cli_py.html  z_a44f0ac069e85531_test_calculator_coverage_py.html  z_a44f0ac069e85531_test_calculator_py.html  z_a44f0ac069e85531_test_cli_py.html  z_a44f0ac069e85531_test_coverage_gaps_py.html  z_a44f0ac069e85531_test_edge_cases_py.html  z_a44f0ac069e85531_test_error_handling_py.html  z_a44f0ac069e85531_test_free_tier_py.html  z_a44f0ac069e85531_test_lambda_py.html  z_a44f0ac069e85531_test_models_py.html  z_a44f0ac069e85531_test_pytest_generate_tests_sample_code_py.html  z_f1b38b22aeb65474_logger_py.html  z_f5ee954ff667d7c7___init___py.html  z_f5ee954ff667d7c7_calculator_py.html  z_f5ee954ff667d7c7_models_py.html
install-&-usage/: index.html
install-usage/: index.html
introduction/: index.html
justfiles/: cdk.just  cosign.just  podman.just  poetry.just  serverless.just  site.just  superlinter.just  trivy.just
pages/: mkdocs.yml
power-tuning/: adv-execution-input.json  execute.sh  run.sh  simple-execution-input.json
search/: search_index.json
security/: index.html
serverless/: template.yaml
site/: .env.development  .env.example  package-lock.json  package.json  tailwind.config.js  tsconfig.json
src/: aws_lambda.py  cli.py  lambda.py  logger.py  main.py
static-website/: index.html  package-lock.json  package.json  react-router.config.ts  vite.config.ts
test/: package-lock.json  package.json  tailwind.config.js  vite.config.js
tests/: test_cli.py  test_coverage_gaps.py  test_edge_cases.py  test_error_handling.py  test_free_tier.py  test_lambda.py  test_main.py
(+66 files in other folders)
