[project]
name = "aws-lambda-calculator-wrappers"
dynamic = [ "version", "dependencies" ]
description = "AWS Lambda calculator wrappers. Supporting AWS Lambda calculator and AWS Lambda calculator CLI."
authors = [
    {name = "Lior Dux", email = "lior.dux@develeap.com"}
]
maintainers = [
    {name = "Alex Machulsky", email = "alexm051197@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
license = {text = "Apache-2.0"}
keywords = ["aws", "lambda", "calculator", "serverless"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration"
]

[tool.poetry]
package-mode = false
version = "1.0"  # base version
# packages = [
#   { include = "cli", from = "src" },
#   { include = "lambda", from = "src" }
#   # { include = "utils", from = "src" }
# ]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.dependencies]
colorama = "^0.4.6"
aws-lambda-calculator = { path = "./aws-lambda-calculator", develop = true }
# aws-lambda-calculator = {git = "https://github.com/zMynx/aws-lambda-calculator.git", rev = "feat/package", subdirectory = "aws-lambda-calculator"}

[project.urls]
homepage = "https://zmynx.github.io/aws-lambda-calculator"
repository = "https://github.com/zMynx/aws-lambda-calculator"
documentation = "https://github.com/zMynx/aws-lambda-calculator/docs/"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = """
    --cov
    --cov-report=term-missing
    --cov-report=xml:coverage.xml
    --cov-branch
"""

[tool.coverage.run]
branch = true
relative_files = true

[dependency-groups]
test = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1"
]
lint = [
    "ruff>=0.12.5",
    "mypy>=1.17.0"
]
dev = [
    {include-group = "test"},
    {include-group = "lint"},
    "types-colorama>=0.4.15.20240311"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
