[project]
name = "aws-lambda-calculator-wrappers"
dynamic = [ "version", "dependencies" ]
description = "AWS Lambda calculator wrappers. Supporting AWS Lambda calculator and AWS Lambda calculator CLI."
authors = [
    {name = "Lior Dux", email = "lior.dux@develeap.com"}
]
maintainers = [
    { name = "Alex Machulsky", email = "alexm051197@gmail.org" },
]
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"

[tool.poetry]
package-mode = false
version = "1.0"  # base version
# packages = [
#   { include = "cli", from = "src" },
#   { include = "lambda", from = "src" }
#   # { include = "utils", from = "src" }
# ]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.dependencies]
colorama = "^0.4.6"
types-colorama = "^0.4.15.20250801"
aws-lambda-calculator = { path = "./aws-lambda-calculator", develop = true }
# aws-lambda-calculator = {git = "https://github.com/zMynx/aws-lambda-calculator.git", rev = "feat/package", subdirectory = "aws-lambda-calculator"}

[project.urls]
homepage = "https://zmynx.github.io/aws-lambda-calculator"
repository = "https://github.com/zMynx/aws-lambda-calculator"
documentation = "https://github.com/zMynx/aws-lambda-calculator/docs/"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = """
    --cov
    --cov-report=term-missing
    --cov-report=xml:coverage.xml
    --cov-branch
"""

[tool.coverage.run]
branch = true
relative_files = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.11"
pytest = "^8.4.2"
mypy = "^1.18.2"
pytest-cov = "^7.0.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
