[project]
name = "aws-lambda-calculator-wrappers"
dynamic = [ "version", "dependencies" ]
description = "AWS Lambda calculator wrappers. Supporting AWS Lambda calculator and AWS Lambda calculator CLI."
authors = [
    {name = "Lior Dux", email = "lior.dux@develeap.com"}
]
maintainers = [
    { name = "Alex Machulsky", email = "alexm051197@gmail.org" },
]
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"

[tool.poetry]
package-mode = false
version = "1.0"  # base version

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.dependencies]
colorama = "^0.4.6"
types-colorama = "^0.4.15.20250801"
aws-lambda-calculator = { path = "./aws-lambda-calculator", develop = true }
# aws-lambda-calculator = {git = "https://github.com/zMynx/aws-lambda-calculator.git", rev = "feat/package", subdirectory = "aws-lambda-calculator"}
pydantic = "^2.12.5"

[tool.poetry.scripts]
# Full command name
aws-lambda-calculator = "cli:run"
aws-lambda-calculator-lambda = "aws_lambda:handler"

# Short alias
alc = "cli:run"
alc-lambda = "aws_lambda:handler"


[project.urls]
homepage = "https://zmynx.github.io/aws-lambda-calculator"
repository = "https://github.com/zMynx/aws-lambda-calculator"
documentation = "https://github.com/zMynx/aws-lambda-calculator/docs/"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = """
  --cov
  --cov-report=term-missing
  --cov-report=xml:coverage.xml
  --cov-branch
"""

[tool.coverage.run]
branch = true
relative_files = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.11"
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
mypy = "^1.19.1"
types-requests = "^2.32.4.20250913"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
