[project]
name = "aws-lambda-calculator"
version = "0.1.0"
description = ""
authors = [
    {name = "zMynx",email = "lior.dux@develeap.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "aws_lambda_calculator", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
