[project]
name = "aws-lambda-calculator"
dynamic = [ "version" ]
description = ""
authors = [
    {name = "zMynx",email = "lior.dux@develeap.com"}
]
maintainers = [
    {name = "Alex Machulsky",email = "alexm051197@gmail.org"},
]
readme = "README.md"
requires-python = ">=3.13"
license = { file = "../docs/LICENSE.md" }
dependencies = [
    "python-dotenv (>=1.1.0,<2.0.0)",
    "colorama (>=0.4.6,<0.5.0)"
]

[tool.poetry]
packages = [{include = "aws_lambda_calculator", from = "src"}]
version = "1.0"  # base version

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[project.urls]
homepage = "https://github.com/zMynx/aws-lambda-calculator"
repository = "https://github.com/zMynx/aws-lambda-calculator"
documentation = "https://github.com/zMynx/aws-lambda-calculator/docs/"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.7"
pytest = "^8.3.4"
mypy = "^1.15.0"
pytest-cov = "^6.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
