[project]
name = "aws-lambda-calculator"
dynamic = [ "version", "dependencies" ]
description = "AWS Lambda Calculator. Python library for calculating AWS Lambda costs."
authors = [
    {name = "zMynx",email = "lior.dux@develeap.com"}
]
maintainers = [
    {name = "Alex Machulsky",email = "alexm051197@gmail.org"},
]
readme = "README.md"
requires-python = ">=3.13"
license = { file = "../docs/LICENSE.md" }

[tool.poetry]
packages = [{include = "aws_lambda_calculator", from = "src"}]
version = "1.0"  # base version

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.dependencies]
colorama = "^0.4.6"
types-colorama = "^0.4.15.20240311"
python-dotenv = "^1.1.0"

[project.urls]
homepage = "https://github.com/zMynx/aws-lambda-calculator"
repository = "https://github.com/zMynx/aws-lambda-calculator"
documentation = "https://github.com/zMynx/aws-lambda-calculator/docs/"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = """
    --cov
    --cov-report=term-missing
    --cov-report=xml:coverage.xml
    --cov-branch
"""

[tool.coverage.run]
branch = true
relative_files = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.7"
pytest = "^8.3.4"
mypy = "^1.15.0"
pytest-cov = "^6.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
